# gterminal-unified-agents

./: .coverage  .dashboard.html  .dashboard.pid  .development-dashboard.json  .env.example  .filewatcher.toml  .gitignore  .mcp.json  .pre-commit-config.yaml  .ruff-server.json  CLAUDE.md  CONSOLIDATION_COMPLETE.md  CONSOLIDATION_SUMMARY.md  CONSOLIDATION_TEST_RESULTS.md  CONSOLIDATION_TEST_SUMMARY.md  CONTRIBUTING.md  COPILOT_INSTRUCTIONS_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DEVOPS_INTEGRATION.md  Dockerfile  Dockerfile.dashboard  Dockerfile.production  Dockerfile.ruff-lsp  ENHANCED_CLI_INTEGRATION.md  ENHANCED_GEMINI_CLI_README.md  EXTRACTION_SUMMARY.md  FUTURE_INTEGRATIONS.md  IMPROVEMENT_REPORT.md  MCP_CONFIGURATION_SUMMARY.md  MCP_INTEGRATION_SUMMARY.md  Makefile  README.md  RUFFT_CLAUDE_ENHANCEMENT_PLAN.md  RUST_MCP_OPTIMIZATION_REPORT.md  SCRIPT_CONSOLIDATION_SUMMARY.md  SECURITY_AUDIT_REPORT.md  TESTING.md  __init__.py  copilot-prompt.md  dashboard_status.json  (+16 more)
.ast-grep/: RULES_SUMMARY.md  sgconfig.yml
.ast-grep/rules/: async-patterns.yml  avoid-clone-in-loop.yml  handling.yml  hardcoded-api-key.yml  mcp-tool-missing-schema.yml  slow-list-append-loop.yml
.claude/: agent-briefing.md  mcp.json  project-context.json  quick-context.md
.context/: comprehensive_project_context.md  quick_summary.md
.github/: copilot-instructions.md  pull_request_template.md
agents/: __init__.py  base_agent_service.py  base_agent_service.py.consolidated-backup  code_generation_agent.py  code_review_agent.py  consolidated_agent_service.py  documentation_generator_agent.py  gemini_consolidation_server.py  gemini_consolidator_agent.py  gemini_orchestrator.py  gemini_server_agent.py  master_architect_agent.py  mcp_code_generator.py  mcp_master_architect.py  production_ready_agent.py  rpc_migration_report.md  rpc_parameter_models.py  rpc_test_implementation.py  rpc_validation_report.py  rust_integration_report.md  workspace_analyzer_agent.py
agents.backup/: __init__.py  unified_agent.py
auth/: __init__.py  api_keys.py  auth_jwt.py  auth_models.py  auth_storage.py  auth_storage.py.backup  gcp_auth.py  security_middleware.py
automation/: __init__.py  consolidated_consolidate_tests.py  direct_doc_generator.py  document_auto_claude.py  example_module.py  gemini_config.py  run_agents.py  test_auto_claude.py  test_mcp_server.py
cache/: __init__.py  cache_manager.py  cache_stats.py  memory_cache.py  redis_cache.py
config/: app_config.py  centralized_config.py  deprecated-mcp-servers.jsonc  enhanced_toolchain.json  optimized-workspace-clean.jsonc  optimized-workspace.jsonc
core/: autonomous_project_analyzer.py  autonomous_react_cli.py  autonomous_react_demo.py  autonomous_react_engine.py  json_utils.py  parameter_validator.py  react_engine.py  session.py  unified_gemini_client.py
core/rpc/: demo.py  (+7 more)
deployment/: deploy-production.sh  deploy.py  kubernetes-production.yml  terraform-aws.tf
docs/: MCP_SETUP_GUIDE.md  REDIS_MEMORY_GPU_ANALYSIS.md  REDIS_MEMORY_GPU_SUMMARY.md  gapp_claude_instructions.md
endpoints/: agent_endpoints.py  auto_claude_endpoints.py  performance_endpoints.py  performance_integration.py
frontend/: package.json  vitest.config.ts
gemini_cli/: __init__.py  __main__.py  gemini_cli_alt.py  main.py  monitoring_commands.py
gterminal_rust_extensions/: Cargo.toml  README.md  USAGE_GUIDE.md  build.py  example_usage.py  pyproject.toml
gterminal_rust_extensions/src/: Cargo.toml  advanced_search.rs  async_ops.rs  auth.rs  buffer_pool.rs  cache.rs  command_executor.rs  error.rs  execution.rs  file_ops.rs  fileops.rs  gemini_client.rs  json.rs  json_processor.rs  lib.rs  path_utils.rs  py_module.rs  simple_core.rs  string_ops.rs  ttl_cache_enhanced.rs  utils.rs  websocket.rs
gterminal_rust_extensions/src/fetch/: error.rs  lib.rs  mod.rs  types.rs
gterminal_rust_extensions/src/fetch/client/: builder.rs  mod.rs
interfaces_alt/: api_adapter.py  cli_adapter.py  mcp_adapter.py
lsp/: README.md  __init__.py  ai_suggestion_engine.py  config_manager.py  demo.py  diagnostic_streamer.py  filewatcher_integration.py  performance_monitor.py  ruff_lsp_client.py
mcp/: __init__.py  base_server.py  client.py  gemini_server_agent_mcp.py  server.py
monitoring/: alertmanager.yml  gterminal-rules.yml  prometheus.production.yml  prometheus.yml
orchestration/: intelligence_merger.py  react_orchestrator.py  service-orchestrator.py  services.yml
performance/: __init__.py  cache_alt.py  cache_manager.py  performance_monitor.py
rust-filewatcher/: Cargo.toml  Dockerfile  README.md
rust-filewatcher/benches/: file_processing.rs
rust-filewatcher/scripts/: install.sh
rust-filewatcher/src/: config.rs  engine.rs  lib.rs  main.rs  server.rs  tools.rs  types.rs  websocket.rs
scripts/: ast-grep-analyzer.py  claude-auto-fix.py  consolidate-build-session.py  demo-rust-capabilities.sh  deploy.sh  devops-orchestrator.sh  enhanced_toolchain.py  high-performance-lint-engine.py  integration-test-runner.sh  integration.sh  mcp-inspector-check.sh  optimization-summary.py  performance-demo.py  pre-commit-mock-detector.py  pre-commit-quality-check.py  rufft-claude.sh  setup-repository.sh  setup-uv-optimization.py  start-filewatcher.sh  test-cache.py  test-mcp-servers.sh  test-uv-lsp-integration.py  validate-and-replace-tools.py  validate-mcp-config.py  validate-mcp-servers.py  validate-uv-integration.py  validate_consolidation.sh
servers/: fastapi_server.py  gemini_server.py  gemini_unified_server.py  health_app.py  main_app.py
terminal/: README_ENHANCED_REACT.md  USAGE_GUIDE.md  __init__.py.gapp-backup  __main__.py  agent_commands.py  agent_integrations.py  complete_react_engine.py  demo_integration.py  enhanced_react_orchestrator.py  main.py  mcp_terminal.py  orchestrator_monitor.py  react_engine.py  react_types.py  rust_terminal_ops.py  toad_integration.py  web_terminal_server.py
tests/: __init__.py  conftest.py  gemini_fixtures.py  test_auth.py  test_basic.py  test_consolidation.py  test_imports.py  test_integration.py  test_runner.py
utils/: __init__.py
vertexai_docs/: scraper.py
(+189 files in other folders)
