[package]
name = "gterminal_rust_extensions"
version = "0.3.0"
edition = "2021"
authors = ["GTerminal Development Team <dev@gterminal.com>"]
description = "High-performance Rust extensions for GTerminal with consolidated fullstack capabilities"
license = "MIT"
repository = "https://github.com/agents/gterminal"
keywords = ["python", "pyo3", "performance", "ai", "agents", "gterminal"]
categories = ["api-bindings", "science"]

[lib]
name = "gterminal_rust_extensions"
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
# PyO3 core dependencies - fully enabled with conflict resolution
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310", "chrono"] }

# Async runtime
tokio = { version = "1.41", features = ["sync", "time", "fs", "io-util", "process", "macros", "rt-multi-thread"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Serialization - high performance with all features enabled
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack
bincode = "1.3"    # Binary serialization
simd-json = "0.13"

# High-performance data structures
ahash = "0.8"                    # Fast hash maps
dashmap = "6.1"                  # Concurrent hash map
indexmap = { version = "2.6", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }
once_cell = "1.20"               # Lazy static initialization
parking_lot = "0.12"

# Caching and storage
redis = { version = "0.26", features = ["aio", "tokio-comp", "connection-manager"], default-features = false }
lru = "0.12"
ttl_cache = "0.5"

# File I/O and system operations
notify = "6.1"
walkdir = "2.5"
glob = "0.3"
ignore = "0.4"  # Fast file filtering
memmap2 = "0.9"  # Memory-mapped files

# Process management
nix = "0.27"
libc = "0.2"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and cache management
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Schema validation
jsonschema = "0.17"

# Path utilities
pathdiff = "0.2"

# String utilities
regex = "1.10"

# Compression for cache snapshots
flate2 = "1.0"

# Async channels
async-channel = "2.1"

[dependencies.pyo3-asyncio]
version = "0.20"
features = ["tokio-runtime"]

[build-dependencies]
pyo3-build-config = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

# Enable SIMD optimizations on x86_64
[target.'cfg(target_arch = "x86_64")'.dependencies]
target-features = "+sse2,+sse3,+ssse3,+sse4.1,+sse4.2,+avx,+avx2"
